# promille

./: .clang-format  .clang-tidy  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.txt  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  basic_example.cpp  hades_basic_example.cpp
extras/millepede2/: CMakeLists.txt
include/StrawAlignment/: EulerAngles.hpp  StrawAlignment.hpp
include/mille_builder/: alignment_model.hpp  euler_angles.hpp  mille_builder.hpp
include/promille/: euler_angles.hpp  promille.hpp
test/: CMakeLists.txt
test/source/: dummy_alignment_model.hpp  dummy_residual_model.hpp  test_alignment_models.cpp  test_derivatives.cpp  test_euler_angles.cpp  test_measurement_plane.cpp  test_mille.cpp  test_operations.cpp  test_parameter_state.cpp  test_promille.cpp  test_residual_models.cpp  test_rotation_matrix.cpp
